--- a/JCPulseAnimatorExample/Podfile
+++ b/JCPulseAnimatorExample/Podfile
@@ -5,7 +5,7 @@ target 'JCPulseAnimatorExample' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-  pod 'JCPulseAnimator', :path => '../../JCPulseAnimator'
+  pod 'JCPulseAnimator', '~> 0.0.4'
 
   # Pods for JCPulseAnimatorExample
 
