--- a/JCPulseAnimatorExample/Podfile
+++ b/JCPulseAnimatorExample/Podfile
@@ -1,11 +1,13 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '10.0'
+
+source 'https://github.com/jmcur/JCPulseAnimator.git'
 
 target 'JCPulseAnimatorExample' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-  pod 'JCPulseAnimator', '~> 0.0.4'
+  pod 'JCPulseAnimator', '~> 0.0.6'
 
   # Pods for JCPulseAnimatorExample
 
